--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,3 +9,5 @@ jobs:
         run: docker-compose up -d
       - name: Test
         run: docker run --network container:webapp-frontend appropriate/curl -s --retry 10 --retry-connrefused http://localhost:5000/
+      - name: Test 2
+        run: curl http://localhost:5000/
