test-get-branch

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,13 +1,15 @@
 name: docker-compose-actions-workflow
-on: push
+on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the stack
-        run: docker-compose up -d
-      - name: Test
-        run: docker run --network container:webapp-frontend appropriate/curl -s --retry 10 --retry-connrefused http://localhost:5000/
-      - name: Test 2
-        run: curl http://localhost:5000/
+      - name: Get Git Branch
+        run: echo "$(git rev-parse --abbrev-ref HEAD)"
+      # - name: Build the stack
+      #   run: docker-compose up -d
+      # - name: Test
+      #   run: docker run --network container:webapp-frontend appropriate/curl -s --retry 10 --retry-connrefused http://localhost:5000/
+      # - name: Test 2
+      #   run: curl http://localhost:5000/
